examples/test/testpolicy18861.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18861
  namespace: namespace109
spec:
  podSelector:
    matchLabels:
      key4: value28
      key22: value30
      key12: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value45
      podSelector:
        matchLabels:
          key24: value12
          key4: value36
          key28: value27
